; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/isa/sb/extr_emu8000_callback.c_snd_emu8000_tweak_voice.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/isa/sb/extr_emu8000_callback.c_snd_emu8000_tweak_voice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_emu8000 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_emu8000*, i32)* @snd_emu8000_tweak_voice to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_emu8000_tweak_voice(%struct.snd_emu8000* %0, i32 %1) #0 {
  %3 = alloca %struct.snd_emu8000*, align 8
  %4 = alloca i32, align 4
  store %struct.snd_emu8000* %0, %struct.snd_emu8000** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @EMU8000_ENVVOL_WRITE(%struct.snd_emu8000* %5, i32 %6, i32 32768)
  %8 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @EMU8000_ENVVAL_WRITE(%struct.snd_emu8000* %8, i32 %9, i32 32768)
  %11 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @EMU8000_DCYSUS_WRITE(%struct.snd_emu8000* %11, i32 %12, i32 32639)
  %14 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @EMU8000_ATKHLDV_WRITE(%struct.snd_emu8000* %14, i32 %15, i32 32639)
  %17 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @EMU8000_ATKHLD_WRITE(%struct.snd_emu8000* %17, i32 %18, i32 32639)
  %20 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @EMU8000_PEFE_WRITE(%struct.snd_emu8000* %20, i32 %21, i32 0)
  %23 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @EMU8000_LFO1VAL_WRITE(%struct.snd_emu8000* %23, i32 %24, i32 32768)
  %26 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @EMU8000_LFO2VAL_WRITE(%struct.snd_emu8000* %26, i32 %27, i32 32768)
  %29 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %30 = load i32, i32* %4, align 4
  %31 = call i32 @EMU8000_IP_WRITE(%struct.snd_emu8000* %29, i32 %30, i32 57344)
  %32 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %33 = load i32, i32* %4, align 4
  %34 = call i32 @EMU8000_IFATN_WRITE(%struct.snd_emu8000* %32, i32 %33, i32 65280)
  %35 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %36 = load i32, i32* %4, align 4
  %37 = call i32 @EMU8000_FMMOD_WRITE(%struct.snd_emu8000* %35, i32 %36, i32 0)
  %38 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %39 = load i32, i32* %4, align 4
  %40 = call i32 @EMU8000_TREMFRQ_WRITE(%struct.snd_emu8000* %38, i32 %39, i32 0)
  %41 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %42 = load i32, i32* %4, align 4
  %43 = call i32 @EMU8000_FM2FRQ2_WRITE(%struct.snd_emu8000* %41, i32 %42, i32 0)
  ret void
}

declare dso_local i32 @EMU8000_ENVVOL_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_ENVVAL_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_DCYSUS_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_ATKHLDV_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_ATKHLD_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_PEFE_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_LFO1VAL_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_LFO2VAL_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_IP_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_IFATN_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_FMMOD_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_TREMFRQ_WRITE(%struct.snd_emu8000*, i32, i32) #1

declare dso_local i32 @EMU8000_FM2FRQ2_WRITE(%struct.snd_emu8000*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
